# SSRAO

./: CMakeLists.txt  README.md
cmake_files/: CMakeLists.txt  config.h.in
data/: basic.glsl  g-buffer.glsl  lighting.glsl
data/shaders/: basic.glsl  g-buffer.glsl  lighting.glsl
data/sponza/: sponza.lws
src/: CMakeLists.txt  GLFrameBuffer.cpp  GLFrameBuffer.h  GLMaterial.cpp  GLMaterial.h  GLObject.cpp  GLObject.h  GLShader.cpp  GLShader.h  basic.glsl  main.cpp  window.cpp  window.h
